# vcpkg-testing

./: README.md
fftw/: CMakeLists.txt  fftw-demo-iostream.cpp  fftw-demo.cpp
portaudio/: CMakeLists.txt  pa-demo.cpp
sqlite/: CMakeLists.txt  sqlite-demo.cpp
